# polkadot-sdk

./: Cargo.toml
polkadot/: Cargo.toml
polkadot/cli/: Cargo.toml
polkadot/node/service/: Cargo.toml
polkadot/node/service/src/: fake_runtime_api.rs
polkadot/rpc/: Cargo.toml
polkadot/rpc/src/: lib.rs
polkadot/runtime/polkadot/src/: lib.rs
polkadot/zondax/: Cargo.toml
polkadot/zondax/src/: lib.rs  runtime.rs  scale.rs
specs_tests/: encoding.py
