[package]
name = "zondax"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-api = { path = "../../substrate/primitives/api" }
jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }
sc-rpc-api = { path = "../../substrate/client/rpc-api" }
